# MediaOperation

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mediaoperation/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  ffmpeg_rtmp_push.c  ffmpeg_rtmp_push.h  filter_add_watermark.c  filter_add_watermark.h  native-lib.cpp
app/src/main/cpp/include/: x264_config.h
app/src/main/cpp/mylibs/: add_wav_header.c  add_wav_header.h
app/src/main/java/com/example/mediaoperation/: AddWavHeader.java  MainActivity.java  RealPathFromUriUtils.java
app/src/main/java/com/example/mediaoperation/ui/audio/: AudioFragment.java  AudioViewModel.java
app/src/main/java/com/example/mediaoperation/ui/multimedia/: MultiMediaFragment.java  MultiMeidaViewModel.java
app/src/main/java/com/example/mediaoperation/ui/player/: PlayerFragment.java  PlayerViewModel.java
app/src/main/java/com/example/mediaoperation/ui/video/: VideoFragment.java  VideoViewModel.java
app/src/main/res/layout/: activity_main.xml  fragment_audio.xml  fragment_multimedia.xml  fragment_player.xml  fragment_video.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: rtmp_server.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mediaoperation/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
